[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Coin.gd" type="Script" id=3]
[ext_resource path="res://Sound/pickupCoin (1).wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Coin" groups=["Coin"] instance=ExtResource( 2 )]
scale = Vector2( 0.5, 0.5 )
z_index = -2
script = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Sprite" parent="." index="1"]
self_modulate = Color( 0.580392, 1, 0.0705882, 1 )
texture = ExtResource( 1 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="." index="2"]
stream = ExtResource( 4 )
volume_db = -15.0

[connection signal="area_entered" from="." to="." method="_on_Coin_area_entered"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
